--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -41,6 +41,13 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
         </activity>
+
+        <activity
+            android:name=".About">
+        </activity>
+        <activity
+            android:name=".HowToPlay">
+        </activity>
     </application>
 
 </manifest>
